--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/styles.css" rel="stylesheet">
-    <!--<link rel="stylesheet" href="/src/index.css">-->
+    <!--<link href="/dist/styles.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="/src/index.css">
     <title>Joaquin Sanchez
     </title>
   </head>
